--- a/Eventify/Views/Shared/_SearchVenues.cshtml
+++ b/Eventify/Views/Shared/_SearchVenues.cshtml
@@ -59,7 +59,7 @@ else
             </div>
             <h4 class="fw-bold mb-2">No Results Found</h4>
             <p class="text-muted mb-0">
-                We couldn’t find any venues that match your filters.
+                We couldn’t find any events that match your filters.
                 Try adjusting your search to see more available options.
             </p>
         </div>
