Fix Event Details

--- a/Eventify/Views/_ViewImports.cshtml
+++ b/Eventify/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Eventify.ViewModels.ProfileVM
 @using Eventify.ViewModels.EventVM
 @using Eventify.ViewModels.VenueVM
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
