--- a/Eventify/Views/Shared/_PersonalEventCard.cshtml
+++ b/Eventify/Views/Shared/_PersonalEventCard.cshtml
@@ -16,9 +16,9 @@
             <div class="d-flex justify-content-between align-items-center">
                 <span class="fw-bold text-primary">From $@Model.TicketPrice</span>
                 <div class="btn-group btn-group-sm" role="group">
-                    <button class="btn btn-outline-primary" title="View"><i class="fas fa-eye"></i></button>
-                    <button class="btn btn-outline-primary" title="Edit"><i class="fas fa-edit"></i></button>
-                    <button class="btn btn-outline-danger" title="Delete"><i class="fas fa-trash"></i></button>
+                    <a class="btn btn-outline-primary" title="View" href="@Url.Action("Details", "Events", new { id = Model.Id })"><i class="fas fa-eye"></i></a>
+                    <a class="btn btn-outline-primary" title="Edit" href="@Url.Action("Edit", "Events", new { id = Model.Id })"><i class="fas fa-edit"></i></a>
+                    <a class="btn btn-outline-danger" title="Delete" href="@Url.Action("Delete", "Events", new { id = Model.Id })"><i class="fas fa-trash"></i></a>
                 </div>
             </div>
         </div>
