--- a/Eventify/Views/Events/Index.cshtml
+++ b/Eventify/Views/Events/Index.cshtml
@@ -219,7 +219,7 @@
 
 
             // Initial load (اختياري إذا تريد تحميل أول batch عبر AJAX عند فتح الصفحة)
-            // loadVenues(true);
+            loadVenues(true);
         });
     </script>
 }
