--- a/Eventify/Views/_ViewImports.cshtml
+++ b/Eventify/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using Eventify.ViewModels.EventVM
 @using Eventify.ViewModels.VenueVM
 @using System.Security.Claims
+@using Eventify.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
