--- a/Eventify/Views/Events/Edit.cshtml
+++ b/Eventify/Views/Events/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Eventify.Models.Enums
 @using Eventify.ViewModels.EventVM
-@model EventAddOrEditVM
+@model EventEditVM
 
 @{
     ViewBag.Title = "Edit Your Event";
@@ -176,7 +176,6 @@
                         <!-- Submit -->
                         <div class="pt-3 border-top d-flex gap-2">
                             <button type="submit" class="btn btn-primary">Update Event</button>
-                            <button type="reset" class="btn btn-outline-primary">Clear Form</button>
                         </div>
 
                         <small class="text-muted d-block mt-2">We'll review your submission and get back to you within 24 hours.</small>
