--- a/Eventify/Views/Profile/PersonalVenueOwner.cshtml
+++ b/Eventify/Views/Profile/PersonalVenueOwner.cshtml
@@ -66,7 +66,8 @@
                     <div class="earnings-amount-wrapper flex-grow-1">
                         <span class="fw-bold earnings-amount" data-max-size="96" data-min-size="18">@Model.WithdrawableEarnings$</span>
                     </div>
-                    <button class="btn btn-primary btn-sm mt-3">Withdraw</button>
+                    @* <button class="btn btn-primary btn-sm mt-3">Withdraw</button> *@
+                    <a class="btn btn-primary btn-sm mt-3" href="@Url.Action("Withdraw", "Payment",new {ownerId = Model.Id})">Withdraw</a>
                 </div>
             </div>
         </div>
@@ -84,3 +85,12 @@
         }
     </div>
 </div>
+
+@if (TempData["WithdrawSuccess"] != null)
+{
+    @await Html.PartialAsync("_SuccessWithdraw")
+}
+else if (TempData["WithdrawFailed"] != null)
+{
+    @await Html.PartialAsync("_FailedWithdraw")
+}
