--- a/Eventify/Views/Venues/Index.cshtml
+++ b/Eventify/Views/Venues/Index.cshtml
@@ -275,7 +275,7 @@
 
 
             // Initial load (اختياري إذا تريد تحميل أول batch عبر AJAX عند فتح الصفحة)
-            loadVenues(true);
+            // loadVenues(true);
         });
     </script>
 }
