--- a/Eventify/Views/Events/Edit.cshtml
+++ b/Eventify/Views/Events/Edit.cshtml
@@ -62,6 +62,7 @@
                     <form id="AddEventForm" asp-action="Edit" method="post" enctype="multipart/form-data">
                         @Html.AntiForgeryToken()
                         <input type="hidden" asp-for="EventId" />
+                        <input type="hidden" asp-for="VenueId" />
 
                         <!-- Basic Information -->
                         <h6 class="fw-bold mb-3">Basic Information</h6>
@@ -125,7 +126,7 @@
                                 <h6 class="fw-semibold mb-2">Upload Event Photos</h6>
                                 <p class="text-muted small mb-0">Add up to 4 high-quality photos of your Event (Start with the main photo)</p>
                                 <input asp-for="FormFiles" class="d-none" id="venuePhotosInput" type="file" multiple />
-                                <span asp-validation-for="FormFiles" class="text-danger"></span>
+                                <span asp-validation-for="DeletedPhotos" class="text-danger"></span>
                             </div>
                             <div class="row g-3" id="venuePhotosPreview"></div>
                         </div>
@@ -187,6 +188,11 @@
         </div>
     </div>
 </div>
+
+@if (TempData["Selected Date is Invalid"] != null)
+{
+    @await Html.PartialAsync("_InvalidBookingDateEdit")
+}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
