--- a/Eventify/Views/Shared/_PersonalEventCard.cshtml
+++ b/Eventify/Views/Shared/_PersonalEventCard.cshtml
@@ -18,9 +18,39 @@
                 <div class="btn-group btn-group-sm" role="group">
                     <a class="btn btn-outline-primary" title="View" href="@Url.Action("Details", "Events", new { id = Model.Id })"><i class="fas fa-eye"></i></a>
                     <a class="btn btn-outline-primary" title="Edit" href="@Url.Action("Edit", "Events", new { id = Model.Id })"><i class="fas fa-edit"></i></a>
-                    <a class="btn btn-outline-danger" title="Delete" href="@Url.Action("Delete", "Events", new { id = Model.Id })"><i class="fas fa-trash"></i></a>
+                    <button class="btn btn-outline-danger"
+                            data-bs-toggle="modal"
+                            data-bs-target="#deleteModal@Model.Id">
+                        <i class="fas fa-trash"></i>
+                    </button>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="deleteModal@Model.Id" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title text-danger">Delete Event</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                Are you sure you want to delete this Event? This action cannot be undone.
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+
+                <a href="@Url.Action("Delete", "Events", new { id = Model.Id })" class="btn btn-danger">
+                    Yes, Delete
+                </a>
+            </div>
+
         </div>
     </div>
 </div>
