--- a/Eventify/Views/Shared/_PersonalVenueCard.cshtml
+++ b/Eventify/Views/Shared/_PersonalVenueCard.cshtml
@@ -22,7 +22,7 @@
                     <a class="btn btn-outline-primary" title="Edit" href="@Url.Action("Edit", "Venues", new { id = Model.Id })"><i class="fas fa-edit"></i></a>
                     <button class="btn btn-outline-danger"
                             data-bs-toggle="modal"
-                            data-bs-target="#deleteModal@Model.Id">
+                            data-bs-target="#deleteModal{@Model.Id}">
                         <i class="fas fa-trash"></i>
                     </button>
                 </div>
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="deleteModal@Model.Id" tabindex="-1" aria-hidden="true">
+<div class="modal fade" id="deleteModal{@Model.Id}" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
 
