--- a/Eventify/Views/Events/Details.cshtml
+++ b/Eventify/Views/Events/Details.cshtml
@@ -193,7 +193,11 @@
                     {
                         <div class="d-grid gap-2 mb-3">
                             <a class="btn btn-outline-primary" href="@Url.Action("Edit", "Events", new { id = Model.EventId})">Edit</a>
-                            <a class="btn btn-outline-danger" href="@Url.Action("Delete", "Events", new { id = Model.EventId})">Delete</a>
+                            @* <a class="btn btn-outline-danger" href="@Url.Action("Delete", "Events", new { id = Model.EventId})">Delete</a> *@
+                            <button class="btn btn-outline-danger" title="Delete"
+                                    data-bs-toggle="modal" data-bs-target="#deleteModal{@Model.EventId}">
+                                Delete
+                            </button>
                         </div>
                     }
                     else
@@ -274,6 +278,32 @@ else if (TempData["ShowCancelPopup"] != null)
     @await Html.PartialAsync("_Cancel")
 }
 
+
+
+<div class="modal fade" id="deleteModal{@Model.EventId}" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title text-danger">Delete Event</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                Are you sure you want to delete this Event? This action cannot be undone.
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+
+                <a href="@Url.Action("Delete", "Events", new { id = Model.EventId})" class="btn btn-danger">
+                    Yes, Delete
+                </a>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 @* @section Scripts { *@
 @*     <script> *@
