--- a/Eventify/Views/Venues/Details_Owner.cshtml
+++ b/Eventify/Views/Venues/Details_Owner.cshtml
@@ -284,7 +284,12 @@
                     </div>
                     <div class="d-grid gap-2 mb-3">
                         <a class="btn btn-outline-primary" href="@Url.Action("Edit", "Venues", new { id = Model.Id })">Edit</a>
-                        <a class="btn btn-outline-danger" href="@Url.Action("Delete", "Venues", new { id = Model.Id})">Delete</a>
+                        @* <a class="btn btn-outline-danger" href="@Url.Action("Delete", "Venues", new { id = Model.Id})">Delete</a> *@
+                        <button class="btn btn-outline-danger"
+                                data-bs-toggle="modal"
+                                data-bs-target="#deleteModal{@Model.Id}">
+                            Delete
+                        </button>
                     </div>
 
 
@@ -326,6 +331,37 @@
         </div>
     </div>
 </div>
+
+
+<div class="modal fade" id="deleteModal{@Model.Id}" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title text-danger">Delete Venue</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <div class="modal-body">
+                Are you sure you want to delete this Venue? This action cannot be undone.
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+
+                <a href="@Url.Action("Delete", "Venues", new { id = Model.Id })" class="btn btn-danger">
+                    Yes, Delete
+                </a>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@if (TempData["DeleteVenueError"] != null)
+{
+    @await Html.PartialAsync("_CantDeleteVenue",Model)
+}
 
 @* @section Scripts { *@
 @*     <script> *@
