Hotfix for photos in edit pages

--- a/Eventify/Views/Events/Edit.cshtml
+++ b/Eventify/Views/Events/Edit.cshtml
@@ -162,6 +162,9 @@
                                 }
                             }
                         </div>
+                        <div class="alert alert-warning">
+                            <strong>Warning!</strong> You MUST have at least one photo in your venue to be approved by the admins.
+                        </div>
 
                         <!-- Privacy -->
                         <h6 class="fw-bold mb-3">Privacy</h6>
