EditDatabase: - Edit Database & Edit SeedData - Edit Configurations - Add Admin Seed Data - Add ErrorMessage In View - some hot fixes in controllers

--- a/Eventify/Views/Events/Details.cshtml
+++ b/Eventify/Views/Events/Details.cshtml
@@ -277,6 +277,14 @@ else if (TempData["ShowCancelPopup"] != null)
 {
     @await Html.PartialAsync("_Cancel")
 }
+else if (TempData["EditEventError"] != null)
+{
+    @await Html.PartialAsync("_EditEventErrorMessage")
+}
+else if (TempData["DeleteEventError"]!= null)
+{
+    @await Html.PartialAsync("_DeleteEventErrorMessage")
+}
 
 
 
