--- a/Eventify/Views/Venues/Details_Owner.cshtml
+++ b/Eventify/Views/Venues/Details_Owner.cshtml
@@ -362,6 +362,10 @@
 {
     @await Html.PartialAsync("_CantDeleteVenue",Model)
 }
+@if (TempData["EditVenueError"]!= null)
+{
+    @await Html.PartialAsync("_EditVenueErrorMessage")
+}
 
 @* @section Scripts { *@
 @*     <script> *@
